# CloudDrive

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_fix_activity_log_ip_address.py  0003_uppercase_item_type.py  0004_add_must_change_password.py  0005_add_assistant_skills.py  0006_add_assistant_workflows.py  0007_add_assistant_sessions.py  0008_add_workflow_name.py  0009_add_snapshots.py  0010_add_snapshot_settings.py  0011_add_file_search_index.py  0012_add_file_embeddings.py  0013_chunked_file_embeddings.py  0014_add_user_external_credentials.py  0015_add_skill_chat_enabled.py  0016_external_model_connections.py
backend/app/: __init__.py  main.py
backend/app/activity_log/: actions.py  repository.py  service.py
backend/app/assistant/: __init__.py  context.py  hooks.py  permissions.py  planner.py  prompt.py  repository.py  router.py  schemas.py  service.py  subagent.py  workflow.py
backend/app/auth/: repository.py  router.py  schemas.py  service.py
backend/app/core/: config.py  dependencies.py  error_codes.py  exceptions.py  security.py
backend/app/db/: base.py
backend/app/download/: router.py  service.py
backend/app/drive/: repository.py  (+3 more)
backend/eval/: __init__.py  baseline.py  exec_runner.py  generate_cases.py  inproc.py  judge.py  report.py  run.py  runner.py  runner_browser.py  schema.py  scoring.py  state.py  verifier.py
backend/tests/: conftest.py  test_health.py
(+411 files in other folders)
