[project]
name = "cloud-drive-backend"
version = "0.1.0"
description = "FastAPI backend for the cloud drive application"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosmtplib>=3.0.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
files = ["app", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Env vars (LOCAL_STORAGE_PATH) must be set before app imports; get_settings()
# is @lru_cache, so these imports are intentionally not at module top.
"tests/integration/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
